[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "EMADB"
version = "2.1"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi==0.115.6",
  "gradio==4.44.0",
  "httpx==0.27.2",
  "selenium==4.35.0",
  "webdriver-manager==4.0.1",
  "beautifulsoup4==4.12.3",
  "python-dotenv==1.1.0",
  "uvicorn==0.32.1"
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
  "pytest-asyncio==0.24.0"
]

[tool.setuptools.packages.find]
where = ["."]